--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".admin.all.AllFloorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.all.FloorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".admin.add.AddFloorActivity"
+            android:exported="false" />
+        <activity
             android:name=".admin.add.AddTableActivity"
             android:exported="false" />
         <activity
