--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,12 @@
         android:theme="@style/Theme.Restaurant_Manager_App"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        
         <activity
             android:name=".ui.ShowImageActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.CreateOderActivity"
+            android:name=".ui.MenuItemActivity"
             android:exported="false" />
         <activity
             android:name=".admin.add.AddMenuItemActivity"
